# life_game

./: .gitignore  Board.cpp  Board.h  BoardDisplayer.cpp  BoardDisplayer.h  BoardObserver.h  CMakeLists.txt  ObservableBoard.cpp  ObservableBoard.h  README.md  main.cpp
Google_tests/: CMakeLists.txt
include/: Board.h  BoardDisplayer.h  BoardObserver.h  ObservableBoard.h
src/: Board.cpp  BoardDisplayer.cpp  ObservableBoard.cpp  main.cpp
test/: BoardTest.cpp  BoardTest.h
